--- a/Demo12.html
+++ b/Demo12.html
@@ -43,7 +43,7 @@
                 },
 
                 // 计算属性会把第一次运行的结果缓存起来，第二次访问时会直接返回结果而不执行计算属性中的代码
-                // 但是一旦计算属性修饰的数据本身发生了变化，那么此时才会再次计算缓存中的内容
+                // 但是一旦计算属性修饰的数据本身发生了变化，那么此时才会再次计属性中的内容
                 numAdd(){
                     var res = this.num++;
                 }
