--- a/Demo16.html
+++ b/Demo16.html
@@ -13,7 +13,7 @@
     <!-- 3、父组件可以再占位符中插入，值类型，或者模板代码 -->
     <!-- 4、插入的代码会替换slot标签 -->
     <div id="app">
-
+        <lqc></lqc>
     </div>
     <template id="tmp">
         <div>
